--- a/setup.cfg
+++ b/setup.cfg
@@ -13,6 +13,7 @@ include_package_data = true
 install_requires =
     aiohttp[speedups]
     aws-lambda-context
+    awsserviceendpoints
     dynamic-function-loader
     gql[aiohttp,requests]==3.0.0a6
     pycognito
