new version of gql

--- a/setup.cfg
+++ b/setup.cfg
@@ -15,7 +15,7 @@ install_requires =
     aws-lambda-context
     awsserviceendpoints
     dynamic-function-loader
-    gql[aiohttp,requests]==3.0.0a6
+    gql[aiohttp,requests]==3.0.0b0
     pycognito
     requests
     simplejson
