use aws-error-utils

--- a/setup.cfg
+++ b/setup.cfg
@@ -12,6 +12,7 @@ packages = find:
 include_package_data = true
 install_requires =
     aiohttp[speedups]
+    aws-error-utils
     aws-lambda-context
     awsserviceendpoints
     dynamic-function-loader
