--- a/setup.cfg
+++ b/setup.cfg
@@ -1,9 +1,9 @@
 [metadata]
 name = echostream-node
-author = Joseph Wortmann
-author_email = jwortmann@quinovas.com
+author = EchoStream
+author_email = pypi@echo.stream
 version = 0.0.1
-description = Helper classes and functions for implementing EchoStream nodes
+description = EchoStream library for implementing remote nodes
 long_description = file: README.md
 long_description_content_type = text/markdown
 
