--- a/setup.cfg
+++ b/setup.cfg
@@ -15,7 +15,7 @@ install_requires =
     aws-error-utils
     awsserviceendpoints
     dynamic-function-loader
-    gql[aiohttp,requests]==3.0.0b1
+    gql[aiohttp,requests]==3.0.0rc0
     pycognito
     requests
     simplejson
