--- a/requirements.dev.txt
+++ b/requirements.dev.txt
@@ -6,7 +6,7 @@ boto3
 boto3-stubs[dynamodb,sqs]
 build
 dynamic-function-loader
-gql[aiohttp,requests]==3.0.0rc0
+gql[aiohttp,requests]>=3.0.0
 pycognito
 requests
 simplejson
