--- a/setup.cfg
+++ b/setup.cfg
@@ -2,7 +2,7 @@
 name = echostream-node
 author = EchoStream
 author_email = pypi@echo.stream
-version = 0.0.14
+version = 0.0.15
 description = EchoStream library for implementing remote nodes
 long_description = file: README.md
 long_description_content_type = text/markdown
@@ -15,7 +15,7 @@ install_requires =
     aws-error-utils
     awsserviceendpoints
     dynamic-function-loader
-    gql[aiohttp,requests]==3.0.0rc0
+    gql[aiohttp,requests]>=3.0.0
     pycognito
     requests
     simplejson
