--- a/.github/workflows/pythonpackage.yml
+++ b/.github/workflows/pythonpackage.yml
@@ -32,3 +32,12 @@ jobs:
         TWINE_PASSWORD: ${{ secrets.PYPI_PASSWORD }}
       run: |
         twine upload dist/*
+    - name: Publish docs
+      env:
+        AWS_DEFAULT_REGION: "us-east-1"
+        AWS_ACCESS_KEY_ID: ${{ secrets.CORP_PIPELINES_ACCESS_KEY }}
+        AWS_SECRET_ACCESS_KEY: ${{ secrets.CORP_PIPELINES_SECRET_KEY }}
+      run: |
+        pip install pdoc
+        pdoc echostream_node -o docs --footer-text "echostream-node `grep "version" setup.cfg | awk '{print $3}'`"
+        aws s3 sync DOCS/ s3://docs-echostream-node-echo-stream/ --sse
