temporarily disable the publish package for testing publish docs

--- a/.github/workflows/pythonpackage.yml
+++ b/.github/workflows/pythonpackage.yml
@@ -33,6 +33,7 @@ jobs:
         TWINE_PASSWORD: ${{ secrets.PYPI_PASSWORD }}
       run: |
         twine upload dist/*
+      if: ${{ false }}
     - name: Publish docs
       env:
         AWS_DEFAULT_REGION: "us-east-1"
