--- a/.github/workflows/pythonpackage.yml
+++ b/.github/workflows/pythonpackage.yml
@@ -40,6 +40,8 @@ jobs:
         AWS_DEFAULT_REGION: "us-east-1"
         AWS_ACCESS_KEY_ID: ${{ secrets.CORP_PIPELINES_ACCESS_KEY }}
         AWS_SECRET_ACCESS_KEY: ${{ secrets.CORP_PIPELINES_SECRET_KEY }}
+        DISTRIBUTION_ID: ${{ secrets.CORP_ECHOSTREAM_NODE_DOCS_DISTRIBUTION_ID }}
       run: |
         pdoc echostream_node -o docs --footer-text "echostream-node `grep "version" setup.cfg | awk '{print $3}'`"
         aws s3 sync docs/ s3://docs-echostream-node-echo-stream/ --sse
+        aws cloudfront create-invalidation --distribution-id $DISTRIBUTION_ID --paths "/*"
