--- a/setup.cfg
+++ b/setup.cfg
@@ -2,7 +2,7 @@
 name = echostream-node
 author = EchoStream
 author_email = pypi@echo.stream
-version = 0.0.17
+version = 0.1.0
 description = EchoStream library for implementing remote nodes
 long_description = file: README.md
 long_description_content_type = text/markdown
@@ -18,5 +18,6 @@ install_requires =
     gql[aiohttp,requests]>=3.0.0
     pycognito
     requests
+    sequential-executor
     simplejson
 python_requires = >=3.9
