--- a/requirements.dev.txt
+++ b/requirements.dev.txt
@@ -1,4 +1,5 @@
 aiohttp[speedups]
+aiorun
 aws-error-utils
 awsserviceendpoints
 black
@@ -10,4 +11,5 @@ gql[aiohttp,requests]>=3.0.0
 pycognito
 requests
 simplejson
+uvloop
 virtualenv
