post threading Lambda test

--- a/setup.cfg
+++ b/setup.cfg
@@ -2,7 +2,7 @@
 name = echostream-node
 author = EchoStream
 author_email = pypi@echo.stream
-version = 0.2.3
+version = 0.3.0
 description = EchoStream library for implementing remote nodes
 long_description = file: README.md
 long_description_content_type = text/markdown
@@ -11,14 +11,14 @@ long_description_content_type = text/markdown
 packages = find:
 include_package_data = true
 install_requires =
-    aiohttp[speedups]
     aiorun
     aws-error-utils
     awsserviceendpoints
     dynamic-function-loader
     gql[aiohttp,requests]>=3.0.0
+    httpx==0.22.*
+    httpx-auth
     pycognito
-    requests
     uvloop
     simplejson
 python_requires = >=3.9
