--- a/requirements.dev.txt
+++ b/requirements.dev.txt
@@ -1,4 +1,3 @@
-aiohttp[speedups]
 aiorun
 aws-error-utils
 awsserviceendpoints
@@ -8,8 +7,9 @@ boto3-stubs[dynamodb,sqs]
 build
 dynamic-function-loader
 gql[aiohttp,requests]>=3.0.0
+httpx==0.22.*
+httpx-auth
 pycognito
-requests
 simplejson
 uvloop
 virtualenv
