--- a/requirements.dev.txt
+++ b/requirements.dev.txt
@@ -5,7 +5,9 @@ boto3
 boto3-stubs[dynamodb,sqs]
 build
 dynamic-function-loader
+echostream-botocore
 gql[aiohttp,requests]>=3.0.0
+gql-appsync-cognito-authentication
 httpx==0.23.*
 httpx-auth==0.15.*
 pycognito
