--- a/setup.cfg
+++ b/setup.cfg
@@ -2,7 +2,7 @@
 name = echostream-node
 author = EchoStream
 author_email = pypi@echo.stream
-version = 0.3.5
+version = 0.3.6
 description = EchoStream library for implementing remote nodes
 long_description = file: README.md
 long_description_content_type = text/markdown
@@ -14,7 +14,9 @@ install_requires =
     aws-error-utils
     awsserviceendpoints
     dynamic-function-loader
+    echostream-botocore
     gql[aiohttp,requests]>=3.0.0
+    gql-appsync-cognito-authentication
     httpx==0.23.*
     httpx-auth==0.15.*
     pycognito
