--- a/setup.cfg
+++ b/setup.cfg
@@ -14,9 +14,9 @@ install_requires =
     aws-error-utils==2.7.0
     awsserviceendpoints==0.0.2
     dynamic-function-loader==0.0.3
-    echostream-botocore=0.0.2
+    echostream-botocore==0.0.2
     gql[aiohttp,requests]==3.4.0
-    gql-appsync-cognito-authentication=0.0.1
+    gql-appsync-cognito-authentication==0.0.1
     httpx==0.23.3
     httpx-auth==0.15.0
     pycognito==2022.12.0
