--- a/requirements.dev.txt
+++ b/requirements.dev.txt
@@ -1,15 +1,15 @@
-aws-error-utils
-awsserviceendpoints
+aws-error-utils==2.7.0
+awsserviceendpoints==0.0.2
 black
 boto3
 boto3-stubs[dynamodb,sqs]
 build
-dynamic-function-loader
-echostream-botocore
-gql[aiohttp,requests]>=3.0.0
-gql-appsync-cognito-authentication
-httpx==0.23.*
-httpx-auth==0.15.*
-pycognito
-simplejson
+dynamic-function-loader==0.0.3
+echostream-botocore==0.0.2
+gql[aiohttp,requests]==3.4.0
+gql-appsync-cognito-authentication==0.0.1
+httpx==0.23.3
+httpx-auth==0.15.0
+pycognito==2022.12.0
+simplejson==3.19.1
 virtualenv
