--- a/.github/workflows/lambdalayer.yml
+++ b/.github/workflows/lambdalayer.yml
@@ -17,46 +17,47 @@ jobs:
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v4
         with:
-          aws-access-key-id: ${{ secrets.AWS_RUNNER_ACCESS_KEY_ID }}
+          aws-access-key-id: ${{ vars.AWS_RUNNER_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_RUNNER_SECRET_ACCESS_KEY }}
-          aws-region: ${{ secrets.AWS_RUNNER_REGION }}
+          aws-region: ${{ vars.AWS_RUNNER_REGION }}
       - name: Start EC2 runner
         id: start-ec2-runner
         uses: machulav/ec2-github-runner@v2
         with:
-          mode: start
-          github-token: ${{ secrets.AWS_RUNNER_GITHUB_TOKEN }}
-          ec2-image-id: ${{ secrets.AWS_RUNNER_PYTHON_EC2_IMAGE_ID }}
-          ec2-instance-type: ${{ secrets.AWS_RUNNER_EC2_INSTANCE_TYPE }}
-          subnet-id: ${{ secrets.AWS_RUNNER_SUBNET_ID }}
-          security-group-id: ${{ secrets.AWS_RUNNER_SECURITY_GROUP_ID }}
-          iam-role-name: ${{ secrets.AWS_RUNNER_IAM_ROLE_NAME }}
           aws-resource-tags: >
             [
               {"Key": "Name", "Value": "github-python-runner"},
               {"Key": "GitHubRepository", "Value": "${{ github.repository }}"}
             ]
+          ec2-image-id: ${{ vars.AWS_RUNNER_PYTHON_EC2_IMAGE_ID }}
+          ec2-instance-type: ${{ vars.AWS_RUNNER_EC2_INSTANCE_TYPE }}
+          github-token: ${{ secrets.AWS_RUNNER_GITHUB_TOKEN }}
+          iam-role-name: ${{ vars.AWS_RUNNER_IAM_ROLE_NAME }}
+          mode: start
+          runner-home-dir: ${{ vars.AWS_RUNNER_HOME_DIR }}
+          security-group-id: ${{ vars.AWS_RUNNER_SECURITY_GROUP_ID }}
+          subnet-id: ${{ vars.AWS_RUNNER_SUBNET_ID }}
   build:
     name: Build and deploy lambda layer
     needs:
       - start-runner
     runs-on: ${{ needs.start-runner.outputs.label }}
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
       - name: Set env vars
         run: |
           echo "AWS_ACCESS_KEY_ID=${{ secrets.ARTIFACTS_PIPELINES_ACCESS_KEY  }}" >> $GITHUB_ENV
           echo "AWS_SECRET_ACCESS_KEY=${{ secrets.ARTIFACTS_PIPELINES_SECRET_KEY }}" >> $GITHUB_ENV
       - name: Create layer
         run: |
-          pip3.9 install --disable-pip-version-check build boto3
-          python3.9 -m build
-          pip3.9 install --disable-pip-version-check -t python dist/echostream_node-*-py3-none-any.whl
+          pip3.12 install --disable-pip-version-check build boto3
+          python3.12 -m build
+          pip3.12 install --disable-pip-version-check -t python dist/echostream_node-*-py3-none-any.whl
           cd python
-          rm -rf urllib3* six* simplejson* s3transfer* python_dateutil* jmespath* botocore* boto3* __pycache__
+          rm -rf __pycache__ boto3* botocore* jmespath* python_dateutil* s3transfer* simplejson* six* urllib3* 
           cd ..
           zip -r echostream-node.zip python/
-          python3.9 publish_layers.py echostream-node.zip
+          python3.12 publish_layers.py echostream-node.zip
   stop-runner:
     name: Stop self-hosted EC2 runner
     needs:
@@ -68,9 +69,9 @@ jobs:
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v4
         with:
-          aws-access-key-id: ${{ secrets.AWS_RUNNER_ACCESS_KEY_ID }}
+          aws-access-key-id: ${{ vars.AWS_RUNNER_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_RUNNER_SECRET_ACCESS_KEY }}
-          aws-region: ${{ secrets.AWS_RUNNER_REGION }}
+          aws-region: ${{ vars.AWS_RUNNER_REGION }}
       - name: Stop EC2 runner
         uses: machulav/ec2-github-runner@v2
         with:
