--- a/requirements.dev.txt
+++ b/requirements.dev.txt
@@ -2,14 +2,14 @@ aws-error-utils==2.7.0
 awsserviceendpoints==0.0.2
 black
 boto3
-boto3-stubs[dynamodb,sqs]
+boto3-stubs[dynamodb,lambda,sqs]
 build
 dynamic-function-loader==0.0.3
 echostream-botocore==0.0.2
-gql[aiohttp,requests]==3.4.1
+gql[aiohttp,requests]==3.5.0
 gql-appsync-cognito-authentication==0.0.1
 httpx==0.27.0
 httpx-auth==0.22.0
-pycognito==2023.5.0
+pycognito==2024.5.1
 simplejson==3.19.2
 virtualenv
