--- a/.github/workflows/pythonpackage.yml
+++ b/.github/workflows/pythonpackage.yml
@@ -24,6 +24,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         python -m pip install --upgrade setuptools wheel twine build virtualenv
+        python -m pip install -r requirements.dev.txt
         python -m pip install pdoc
     - name: Build package
       run: |
